# fteulator

./: README.md  package.json  quasar.conf.js
src-electron/icons/: icon.icns
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/dialogs/: AddTask.vue
src/css/: app.scss
src/layouts/: MainLayout.vue
src/models/: task.ts
src/pages/: Index.vue
test/cypress/data/: fourSprint.ts  models.ts  oneYear.ts  sixMonth.ts  sixtyDay.ts
test/cypress/integration/: home.spec.ts
