[package]
authors = ["Aaron Hoffman <kd0sgh@gmail.com>"]
build = "src/build.rs"
default-run = "fteulator"
description = "Simple calculator for estimating FTEs"
edition = "2018"
license = ""
name = "fteulator"
repository = ""
version = "0.0.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.0.0-beta.4"}

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tauri = {version = "1.0.0-beta.6", features = ["api-all"]}

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
